k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nutricao
  labels:
    name: nutricao
