k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sistema-nutricao-deployment
  namespace: nutricao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sistema-nutricao
  template:
    metadata:
      labels:
        app: sistema-nutricao
    spec:
      containers:
        - name: sistema-nutricao
          image: b3rnar0p/sistema-nutricao:3
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-storage
              mountPath: /app/uploads
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 30
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-pvc
