k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sistema-nutricao-service
  namespace: nutricao
spec:
  selector:
    app: sistema-nutricao
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
