k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sistema-nutricao-ingress
  namespace: nutricao
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: sistema-nutricao.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sistema-nutricao-service
                port:
                  number: 80
